--- a/templates/search.xhtml
+++ b/templates/search.xhtml
@@ -18,5 +18,6 @@
       <input type="submit" name="submit" value="Search" />
     </fieldset>
   </form>
+  <p>Alternately, you could <a href="/logs">browse the logs</a>.</p>
 </body>
 </html>
