Adding a small implementation of limiting access.
Not every user should be able to view/search every channel, so this is the
start of an implementation for limiting that. The actual limiting part is done,
but there's no (easy) way to build resources with the limiting behavior.

Bonus feature: refactored stripping prefixes off channel names.

--- a/templates/search.xhtml
+++ b/templates/search.xhtml
@@ -18,6 +18,14 @@
       <input type="submit" name="submit" value="Search" />
     </fieldset>
   </form>
-  <p>Alternately, you could <a href="/logs">browse the logs</a>.</p>
+  <p>Alternately, you could browse the logs:</p>
+  <ul>
+    <li t:render="channels">
+      <a>
+        <t:attr name="href">logs/<t:slot name="indexName" /></t:attr>
+        <t:slot name="channel" />
+      </a>
+    </li>
+  </ul>
 </body>
 </html>
