Making ElastircFactory an IResource Realm.
During initialization, ElastircFactory can now take a mapping from usernames to
allowed channels and construct Resources which restrict access by username.

Bonus feature: adding a missing trailing slash in search.xhtml.

--- a/templates/search.xhtml
+++ b/templates/search.xhtml
@@ -22,7 +22,7 @@
   <ul>
     <li t:render="channels">
       <a>
-        <t:attr name="href">logs/<t:slot name="indexName" /></t:attr>
+        <t:attr name="href">logs/<t:slot name="indexName" />/</t:attr>
         <t:slot name="channel" />
       </a>
     </li>
