Swap ElasticSearch for Whoosh.

--- a/templates/search-result-file.xhtml
+++ b/templates/search-result-file.xhtml
@@ -2,7 +2,7 @@
   <h3>
     <a>
       <t:attr name="href"><t:slot name="logPath" /></t:attr>
-      <t:slot name="index" />
+      <t:slot name="logName" />
     </a>
   </h3>
   <p class="log-line" t:render="logLines"><t:slot name="timestamp" /> <t:slot name="formatted" /></p>
